test/fail/AmbiguousTopLevelModuleName.agda
module AmbiguousTopLevelModuleName where

import Imports.Ambiguous
